--- a/UN/Packages/manifest.json
+++ b/UN/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.meta.xr.sdk.core": "76.0.1",
     "com.meta.xr.sdk.interaction.ovr": "76.0.1",
     "com.meta.xr.sdk.voice": "74.0.0",
+    "com.meta.xr.simulator.synthenvbuilder": "60.0.1",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.0",
@@ -15,9 +16,7 @@
     "com.unity.xr.hands": "1.5.1",
     "com.unity.xr.interaction.toolkit": "3.1.2",
     "com.unity.xr.management": "4.5.1",
-    "com.unity.xr.meta-openxr": "2.1.0",
     "com.unity.xr.oculus": "4.5.1",
-    "com.unity.xr.openxr": "1.14.3",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
